Add multimedia admin notifications
